# transversal

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
auth/: Cargo.toml
auth/src/: lib.rs
infra/: init_db.sql  keycloak_config.json
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250722_152740_create_users.rs  m20250723_231106_update_users.rs  m20250724_161551_sessions.rs  m20250727_234302_albums.rs
models/: Cargo.toml
models/src/: lib.rs  oauth.rs  session.rs  state.rs  user.rs  user_auth.rs  user_repository.rs
models/src/repositories/: album.rs  mod.rs  user.rs
src/: auth.rs  auth_utils.rs  axum_auth.rs  main.rs  model.rs
src/controllers/: album.rs  auth.rs  mod.rs
views/: Cargo.toml
views/src/: lib.rs
views/templates/: album_view.html  index.html  template.html  user_details.html
