[package]
name = "transversal"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[workspace]
members = ["views", "models", "migration"]

[workspace.package]
version = "0.1.0"
authors = ["Samuel Silva <samuel@slva.fr>"]
edition = "2024"
rust-version = "1.88.0"
publish = false

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync"] }
log = { version = "0.4.27", features = ["serde", "kv_serde"] }
serde = "1.0.219"
serde_json = "1.0.141"
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
    "json",
    "charset",
    "http2",
] }
tower-sessions = "0.14.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[dependencies]
axum = "0.8.4"
log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-sessions = { workspace = true }
sha2 = "^0.10.8"
serde_urlencoded = "^0.7"
jsonwebtoken = "9"
axum-macros = "0.5.0"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = [
    "compression-br",
    "decompression-br",
    "compression-gzip",
    "decompression-gzip",
    "fs",
    "trace",
    "util",
    "normalize-path",
] }
views = { path = "views" }
models = { path = "models" }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "tracing",
    "tracing-serde",
] }
tracing-core = "0.1.34"

[lints]
workspace = true
