[package]
name = "auth"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
models = { path = "../models" }

serde = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sha2 = "^0.10.8"
serde_urlencoded = "^0.7"
jsonwebtoken = "9"

[lints]
workspace = true
