[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
chrono = { workspace = true }
axum-login = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
time = "0.3.41"
