[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
chrono = { workspace = true }
axum-login = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
sha2 = "^0.10.8"
base64ct = { version = "1", features = ["alloc"] }
time = "0.3.41"
lru = "0.16.0"

[lints]
workspace = true
